==> ARMmbed/mbed-os/targets/TARGET_Cypress/TARGET_PSOC6/serial_api.c <==
#include <string.h>
#include "cmsis.h"
#include "mbed_assert.h"
#include "mbed_error.h"
#include "PeripheralPins.h"
#include "pinmap.h"
#include "serial_api.h"
#include "psoc6_utils.h"
#include "cy_sysclk.h"
#include "cy_gpio.h"
#include "cy_scb_uart.h"
#include "cy_sysint.h"
#include "cycfg_pins.h"
#define UART_OVERSAMPLE                 12
#define UART_DEFAULT_BAUDRATE           115200
#define NUM_SERIAL_PORTS                8
#define SERIAL_DEFAULT_IRQ_PRIORITY     3
#define UART_RX_INTR_MASK   (CY_SCB_UART_RX_TRIGGER   | CY_SCB_UART_RX_OVERFLOW  | \
                             CY_SCB_UART_RX_ERR_FRAME | CY_SCB_UART_RX_ERR_PARITY)
#define SERIAL_PM_CALLBACK_ENABLED 1
#define SERIAL_PM_CALLBACK_ENABLED 0
#define OBJ_P(in)     (&(in->serial))
#define OBJ_P(in)     (in)

void serial_init(serial_t *obj_in, PinName tx, PinName rx)
{
    serial_obj_t *obj = OBJ_P(obj_in);
    bool is_stdio = (tx == CY_STDIO_UART_TX) || (rx == CY_STDIO_UART_RX);
#if !defined(TARGET_CY8CKIT_062_BLE)
    bool is_bt = (tx == CY_BT_UART_TX) || (rx == CY_BT_UART_RX);
#else
    bool is_bt = false;
#endif

    if (is_stdio && stdio_uart_inited) {
        memcpy(obj_in, &stdio_uart, sizeof(serial_t));
        return;
    } else if (is_bt && bt_uart_inited) {
        memcpy(obj_in, &bt_uart, sizeof(serial_t));
        return;
    } else {
        uint32_t uart = pinmap_peripheral(tx, PinMap_UART_TX);
        uart = pinmap_merge(uart, pinmap_peripheral(rx, PinMap_UART_RX));

        if (uart != (uint32_t)NC) {
            uint32_t  serial_id = ((UARTName)uart - UART_0) / (UART_1 - UART_0);

            /* Initialize configuration */
            obj->base      = (CySCB_Type *)uart;
            obj->serial_id = serial_id;
            obj->clock     = CY_PIN_CLOCK(pinmap_function(tx, PinMap_UART_TX));
            obj->div_num   = CY_INVALID_DIVIDER;
            obj->already_reserved = (0 != cy_reserve_scb(obj->serial_id));

            obj->pin_tx    = tx;
            obj->pin_rx    = rx;
            obj->pin_rts   = NC;
            obj->pin_cts   = NC;

            obj->data_width = 8;
            obj->stop_bits  = CY_SCB_UART_STOP_BITS_1;
            obj->parity     = CY_SCB_UART_PARITY_NONE;

            /* Check if resource severed */
            if (obj->already_reserved) {
                uint32_t map;

                /* SCB pins and clocks are connected */

                /* Disable block and get it into the default state */
                Cy_SCB_UART_Disable(obj->base, NULL);
                Cy_SCB_UART_DeInit(obj->base);

                /* Get connected clock */
                map = Cy_SysClk_PeriphGetAssignedDivider(obj->clock);
                obj->div_num  = _FLD2VAL(CY_PERI_CLOCK_CTL_DIV_SEL,  map);
                obj->div_type = (cy_en_divider_types_t) _FLD2VAL(CY_PERI_CLOCK_CTL_TYPE_SEL, map);
            } else {
#if DEVICE_SLEEP && DEVICE_LPTICKER && SERIAL_PM_CALLBACK_ENABLED
                /* Register callback once */
                obj->pm_callback_handler.callback = serial_pm_callback;
                obj->pm_callback_handler.type     = CY_SYSPM_DEEPSLEEP;
                obj->pm_callback_handler.skipMode = 0;
                obj->pm_callback_handler.callbackParams = &obj->pm_callback_params;
                obj->pm_callback_params.base    = obj->base;
                obj->pm_callback_params.context = obj;

                if (!Cy_SysPm_RegisterCallback(&obj->pm_callback_handler)) {
                    error("PM callback registration failed!");
                }
#endif /* DEVICE_SLEEP && DEVICE_LPTICKER && SERIAL_PM_CALLBACK_ENABLED */
            }

            /* Configure hardware resources */
            serial_init_clock(obj, UART_DEFAULT_BAUDRATE);
            serial_init_pins(obj);
            serial_init_peripheral(obj);

            if (is_stdio) {
                memcpy(&stdio_uart, obj_in, sizeof(serial_t));
                stdio_uart_inited = 1;
            } else if (is_bt) {
                memcpy(&bt_uart, obj_in, sizeof(serial_t));
                bt_uart_inited = true;
            }
        } else {
            error("Serial pinout mismatch. Requested pins Rx and Tx can't be used for the same Serial communication.");
        }
    }
}

void serial_baud(serial_t *obj_in, int baudrate)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    Cy_SCB_UART_Disable(obj->base, NULL);
    serial_init_clock(obj, baudrate);
    Cy_SCB_UART_Enable(obj->base);
}

void serial_format(serial_t *obj_in, int data_bits, SerialParity parity, int stop_bits)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    if ((data_bits >= 5) && (data_bits <= 9)) {
        obj->data_width = data_bits;
    }

    switch (parity) {
        case ParityNone:
            obj->parity = CY_SCB_UART_PARITY_NONE;
            break;
        case ParityOdd:
            obj->parity = CY_SCB_UART_PARITY_ODD;
            break;
        case ParityEven:
            obj->parity = CY_SCB_UART_PARITY_EVEN;
            break;
        case ParityForced1:
        case ParityForced0:
            error("Serial parity mode not supported!");
            break;
    }

    switch (stop_bits) {
        case 1:
            obj->stop_bits = CY_SCB_UART_STOP_BITS_1;
            break;
        case 2:
            obj->stop_bits = CY_SCB_UART_STOP_BITS_2;
            break;
        case 3:
            obj->stop_bits = CY_SCB_UART_STOP_BITS_3;
            break;
        case 4:
            obj->stop_bits = CY_SCB_UART_STOP_BITS_4;
            break;
    }

    Cy_SCB_UART_Disable(obj->base, NULL);
    serial_init_peripheral(obj);
    /* SCB is enabled at the and of serial_init_peripheral() call */
}

void serial_putc(serial_t *obj_in, int c)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    while (0 == serial_writable(obj_in)) {
        /* There is an entry to be written */
    }

    Cy_SCB_WriteTxFifo(obj->base, (uint32_t) c);
}

int serial_getc(serial_t *obj_in)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    while (0 == serial_readable(obj_in)) {
        /* There is an item to be read */
    }

    return Cy_SCB_UART_Get(obj->base);
}

int serial_readable(serial_t *obj_in)
{
    serial_obj_t *obj = OBJ_P(obj_in);
    return Cy_SCB_GetNumInRxFifo(obj->base);
}

int serial_writable(serial_t *obj_in)
{
    serial_obj_t *obj = OBJ_P(obj_in);
    return (Cy_SCB_GetFifoSize(obj->base) != Cy_SCB_GetNumInTxFifo(obj->base));
}

void serial_clear(serial_t *obj_in)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    /* The hardware FIFOs and statuses are cleared when SCB is disabled */
    Cy_SCB_UART_Disable(obj->base, NULL);
    serial_init_peripheral(obj);
    /* SCB is enabled at the and of serial_init_peripheral() call */
}

void serial_break_set(serial_t *obj_in)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    /* Cypress SCB does not support transmitting break directly.
     * We emulate functionality by switching TX pin to GPIO mode.
     */
    GPIO_PRT_Type *port_tx = Cy_GPIO_PortToAddr(CY_PORT(obj->pin_tx));
    Cy_GPIO_Pin_FastInit(port_tx, CY_PIN(obj->pin_tx), CY_GPIO_DM_STRONG_IN_OFF, 0, HSIOM_SEL_GPIO);
    Cy_GPIO_Write(port_tx, CY_PIN(obj->pin_tx), 0);
}

void serial_set_flow_control(serial_t *obj_in, FlowControl type, PinName rxflow, PinName txflow)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    /* Do not perform pins reservation second time for the same pins */
    if ((obj->pin_rts == rxflow) && (obj->pin_cts == txflow)) {
        return;
    }

    Cy_SCB_UART_Disable(obj->base, NULL);

    switch (type) {
        case FlowControlNone:
            obj->pin_rts = NC;
            obj->pin_cts = NC;
            break;
        case FlowControlRTS:
            obj->pin_rts = rxflow;
            obj->pin_cts = NC;
            break;
        case FlowControlCTS:
            obj->pin_rts = NC;
            obj->pin_cts = txflow;
            break;
        case FlowControlRTSCTS:
            obj->pin_rts = rxflow;
            obj->pin_cts = txflow;
            break;
    }

    serial_init_flow_pins(obj);
    serial_init_peripheral(obj);
}

void serial_irq_set(serial_t *obj_in, SerialIrq irq, uint32_t enable)
{
    serial_obj_t *obj = OBJ_P(obj_in);

    switch (irq) {
        case RxIrq: /* RxIrq for receive (buffer is not empty) */
            Cy_SCB_SetRxInterruptMask(obj->base, (0 != enable) ? CY_SCB_RX_INTR_NOT_EMPTY : 0);
            break;

        case TxIrq: /* TxIrq for transmit (buffer is empty) */
            Cy_SCB_SetTxInterruptMask(obj->base, (0 != enable) ? CY_SCB_UART_TX_EMPTY : 0);
            break;
    }
}
